--- a/config.json
+++ b/config.json
@@ -21,11 +21,11 @@
   },
   "commandDisabled": [],
   "eventDisabled": [],
-  "BOTNAME": "Bot Pack v2",
+  "BOTNAME": "Bot v2",
   "PREFIX": "?",
   "ADMINBOT": [
-    "100044327656712",
-    "100090108488920"
+    "100076343334427",
+    "100076343334427"
   ],
   "reactUnsend": [
     "😡",
